--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,12 +53,16 @@
     transition: .5s;
   }
 
-  input[type="text"]{
+  /* input[type="text"]{
     width: 30%;
     height: 35px;
     padding: 10px;
     border-radius: 50px;
     border: 1px solid #000;
+  } */
+  .btn-primary{
+    background-color: var(--button-color);
+    
   }
 
   .checkbtn{
