add proposal design

--- a/public/css/side_bar_style.css
+++ b/public/css/side_bar_style.css
@@ -8,6 +8,11 @@ body {
     background: #fafafa;
 }
 
+#editor-container {
+    height: 375px;
+  }
+  
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
