--- a/public/css/side_bar_style.css
+++ b/public/css/side_bar_style.css
@@ -8,6 +8,10 @@ body {
     background: #fafafa;
 }
 
+.primary-btn{
+    background-color: #05C19C;
+}
+
 #editor-container {
     height: 375px;
   }
@@ -95,14 +99,14 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #05C19C;
     background: #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #000;
-    background: #fff;
+    color: #fff;
+    background: #05C19C;
 }
 
 a[data-toggle="collapse"] {
@@ -140,6 +144,7 @@ a.download {
     color: #7386D5;
 }
 
+
 a.article,
 a.article:hover {
     background: #6d7fcc !important;
@@ -175,6 +180,18 @@ a.article:hover {
     border-radius: 10px;
     width: 100%;
     resize: none;
+}
+
+.notification{
+    margin: 10px;
+    border-radius: 10px;
+    background: rgba(250, 248, 255, 0.79);
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 19px;
+}
+
+.notification .body{
+   padding: 10px;
 }
 /* ---------------------------------------------------
     MEDIAQUERIES
