--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -1,15 +1,32 @@
+
+.filter-btn {
+  background-color: #05C19C; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  width: 100%;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.filter-btn:hover{
+  background-color: #05c19b90;
+}
+
 .custom-card{
     border-radius: 10px;
     background-color: #05C19C;
 }
 
 .custom-card .mini{
-    border-radius: 40px;
+    border-radius: 0px 8px 8px 0px;
     max-width: 150px;
     background-color: #e8fffa;
     color: #000;
     padding: 10px;
-    margin: 10px;
+   
     font-size: 11px;
     font-weight: 700;
 }
@@ -22,10 +39,10 @@
 }
 
 .custom-card .body{
-    margin: 10px;
+    margin: 10px 10px 0px 10px;
     font-size: 18px;
     color : #fff;
-    margin-bottom: 20px;
+    
 }
 
 .notification{
@@ -34,4 +51,38 @@
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     border-radius: 19px;
 }
+
+.price-input{
+    width: 100%;
+    display: flex;
+    margin: 10px 0 35px;
+  }
+  .price-input .field{
+    display: flex;
+    width: 100%;
+    height: 45px;
+    align-items: center;
+  }
+  .field input{
+    width: 100%;
+    height: 100%;
+    outline: none;
+    font-size: 19px;
+    
+    border-radius: 5px;
+    text-align: center;
+    border: 1px solid #999;
+    -moz-appearance: textfield;
+  }
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  .price-input .separator{
+    width: 50px;
+    display: flex;
+    font-size: 19px;
+    align-items: center;
+    justify-content: center;
+  }
 
