--- a/public/css/side_bar_style.css
+++ b/public/css/side_bar_style.css
@@ -8,6 +8,16 @@ body {
     background: #fafafa;
 }
 
+.logout-button {
+    background-color: #fafafa; /* Green */
+    border: none;
+    color: #000;
+    width: 100%;
+    height: 70px;    
+    text-decoration: none;
+    font-size: 16px;
+  }
+
 .primary-btn{
     background-color: #05C19C;
 }
@@ -66,8 +76,8 @@ a:focus {
 }
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 300px;
+    max-width: 300px;
     background: #fff;
     color: #000;
     transition: all 0.3s;
