--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -1,6 +1,6 @@
-
 .filter-btn {
-  background-color: #05C19C; /* Green */
+  background-color: #05C19C;
+  /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -11,78 +11,144 @@
   font-size: 16px;
 }
 
-.filter-btn:hover{
+.filter-btn:hover {
   background-color: #05c19b90;
 }
 
-.custom-card{
-    border-radius: 10px;
-    background-color: #05C19C;
+.proposal-card {
+  background: rgba(255, 255, 255, 0.75);
+  color: #868c96;
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border-radius: 10px;
 }
 
-.custom-card .mini{
-    border-radius: 0px 8px 8px 0px;
-    max-width: 150px;
-    background-color: #e8fffa;
-    color: #000;
-    padding: 10px;
-   
-    font-size: 11px;
-    font-weight: 700;
+.price-card {  
+
+  color: #000;
+  font-weight: 800;
+  background-color: rgba(5, 193, 156, 0.22);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
-.custom-card .title{
-    margin: 10px;
-    font-size: 25px;
-    font-weight: 600;
-    color : #fff;
+.custom-card {
+  border-style: solid none none none;
+  color: #000;
+
 }
 
-.custom-card .body{
-    margin: 10px 10px 0px 10px;
-    font-size: 18px;
-    color : #fff;
-    
+.custom-card .mini {
+  border-radius: 0px 8px 8px 0px;
+  max-width: 150px;
+  background-color: #e8fffa;
+  color: #000;
+  padding: 10px;
+
+  font-size: 11px;
+  font-weight: 700;
 }
 
-.notification{
-    border-radius: 10px;
-    background: rgba(250, 248, 255, 0.79);
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 19px;
+.custom-card .title {
+  margin: 10px;
+  font-size: 25px;
+  font-weight: 600;
+  color: #000;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+
 }
 
-.price-input{
-    width: 100%;
-    display: flex;
-    margin: 10px 0 35px;
-  }
-  .price-input .field{
-    display: flex;
-    width: 100%;
-    height: 45px;
-    align-items: center;
-  }
-  .field input{
-    width: 100%;
-    height: 100%;
-    outline: none;
-    font-size: 19px;
-    
-    border-radius: 5px;
-    text-align: center;
-    border: 1px solid #999;
-    -moz-appearance: textfield;
-  }
-  input[type="number"]::-webkit-outer-spin-button,
-  input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-  }
-  .price-input .separator{
-    width: 50px;
-    display: flex;
-    font-size: 19px;
-    align-items: center;
-    justify-content: center;
-  }
+.custom-card .title:hover {
+  color: #05C19C;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
 
+.custom-card .title .icon:hover {
+  text-decoration: none;
+}
+
+.custom-card .body {
+  margin: 10px 10px 0px 10px;
+  font-size: 18px;
+  color: #000;
+
+}
+
+.notification {
+  border-radius: 10px;
+  background: rgba(250, 248, 255, 0.79);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 19px;
+}
+
+.price-input {
+  width: 100%;
+  display: flex;
+  margin: 10px 0 35px;
+}
+
+.price-input .field {
+  display: flex;
+  width: 100%;
+  height: 45px;
+  align-items: center;
+}
+
+.field input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 19px;
+
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #999;
+  -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.price-input .separator {
+  width: 50px;
+  display: flex;
+  font-size: 19px;
+  align-items: center;
+  justify-content: center;
+}
+
+.homepage-inverse-header {
+  background-color: #05C19C;
+  padding-bottom: 40px;
+  padding-top: 50px;
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.homepage-inverse-header__title {
+  font-weight: 700;
+  color: #fff;
+  font-size: 32px;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin: 0;
+  padding-bottom: 30px;
+}
+
+.homepage-inverse-header__intro {
+  color: #fff;
+  font-size: 19px;
+  font-size: 1.1875rem;
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.homepage-inverse-header__intro--bold {
+  font-weight: 700;
+}
