--- a/public/css/style.css
+++ b/public/css/style.css
@@ -750,11 +750,11 @@
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #05c19b90;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #05c19b90;
   }
   
   input:checked + .slider:before {
