--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -35,6 +35,7 @@
     text-decoration: underline; }
   
   .half .btn {
+    width: 100%;
     height: 54px;
     padding-left: 30px;
     padding-right: 30px; }
