--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1078,6 +1078,10 @@ input:checked + .toggle-bg {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
 .-mb-px {
   margin-bottom: -1px;
 }
@@ -1224,6 +1228,12 @@ input:checked + .toggle-bg {
 }
 .h-screen {
   height: 100vh;
+}
+.h-1\/6 {
+  height: 16.666667%;
+}
+.h-96 {
+  height: 24rem;
 }
 .w-1\/2 {
   width: 50%;
@@ -1467,6 +1477,9 @@ input:checked + .toggle-bg {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.rounded-sm {
+  border-radius: 0.125rem;
+}
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1536,6 +1549,10 @@ input:checked + .toggle-bg {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-main {
+  --tw-border-opacity: 1;
+  border-color: rgb(5 193 156 / var(--tw-border-opacity));
 }
 .bg-blue-700 {
   --tw-bg-opacity: 1;
@@ -2023,6 +2040,10 @@ input:checked + .toggle-bg {
       max-width: 1536px;
     }
   }
+}
+.first-letter\:text-sm::first-letter {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .first-letter\:text-gray-900::first-letter {
   --tw-text-opacity: 1;
